# tfd-sdk

./: .example.env  .gitignore  Makefile  README.md  pyproject.toml  setup.py
.openapi-generator/: FILES
.run/: tfd_sdk.util.format_api_spec.run.xml
docs/: DescendantResponseInner.md  DescendantResponseInnerDescendantSkillInner.md  DescendantResponseInnerDescendantStatInner.md  DescendantResponseInnerDescendantStatInnerStatDetailInner.md  ErrorMessage.md  ErrorMessageError.md  ExternalComponentResponseInner.md  ExternalComponentResponseInnerBaseStatInner.md  ExternalComponentResponseInnerSetOptionDetailInner.md  MetaDataApi.md  ModuleRecommendationResponse.md  ModuleRecommendationResponseDescendant.md  ModuleRecommendationResponseDescendantRecommendationInner.md  ModuleRecommendationResponseWeapon.md  ModuleResponseInner.md  ModuleResponseInnerModuleStatInner.md  ReactorResponseInner.md  ReactorResponseInnerReactorSkillPowerInner.md  ReactorResponseInnerReactorSkillPowerInnerEnchantEffectInner.md  ReactorResponseInnerReactorSkillPowerInnerSkillPowerCoefficientInner.md  RecommendationApi.md  RewardResponseInner.md  RewardResponseInnerBattleZoneInner.md  RewardResponseInnerBattleZoneInnerRewardInner.md  StatResponseInner.md  TitleResponseInner.md  User.md  UserApi.md  UserBasic.md  UserDescendant.md  UserDescendantModuleInner.md  UserExternalComponent.md  UserExternalComponentExternalComponentInner.md  UserExternalComponentExternalComponentInnerExternalComponentAdditionalStatInner.md  UserReactor.md  UserReactorReactorAdditionalStatInner.md  UserWeapon.md  UserWeaponWeaponInner.md  UserWeaponWeaponInnerWeaponAdditionalStatInner.md  VoidBattleResponseInner.md  (+4 more)
openapi/: meta.openapi.yml  openapi.defaults.yml  recommendation.openapi.yml  tfd_account_info-2024-08-03.openapi.yml  tfd_meta-2024-08-03.openapi.yml  tfd_recommendation-2024-08-03.openapi.yml  user.openapi.yml
scripts/: get-openapi-spec.sh  install-sdk.sh  (+3 more)
(+115 files in other folders)
